# ws-benchmark

./: README.md  ad.txt  bench.pl  g.txt  results-vps_1_core.txt  results-vps_1_core.xlsx  results-xeon_4_core-max100-192_168_1_X.xlsx  results-xeon_4_core-max100-localhost.txt  results-xeon_4_core.txt  spring.txt  test_db.sql
implementations/actix-diesel/: Cargo.toml
implementations/actix-diesel/src/: main.rs  models.rs  schema.rs  service.rs  utils.rs
implementations/actix-diesel/src/test/: query-string.rs
implementations/actix-no-diesel/: Cargo.toml
implementations/actix-no-diesel/src/: main.rs
implementations/actix-no-diesel/src/color/: mod.rs
implementations/actix-sync/: Cargo.toml
implementations/actix-tokio/: Cargo.toml
implementations/actix-tokio/src/: db.rs  main.rs  utils.rs
implementations/athena/: shard.yml
implementations/atreugo/: main.go
implementations/express/: index.js  package.json  queries.js
implementations/fasthttp-router/: main.go  model.go
implementations/gorilla/: README.txt  app.go  main.go  model.go
implementations/grip/: .gitignore  shard.yml
implementations/http4s/: .gitignore  README.md  build.sbt
implementations/kemal/: shard.yml
implementations/mojo-pg/: README.txt  ws.pl
implementations/php/: .gitignore  README.txt  apache-httpd.conf
implementations/raze/: shard.yml
implementations/spider-ge/: .gitignore  shard.yml
implementations/spider-granite/: shard.yml
results/: i7_8_core-max100-localhost.txt  i7_8_core-max100-localhost.xlsx  vps_1_core.txt  vps_1_core.xlsx  xeon_4_core-max100-192_168_1_X.txt  xeon_4_core-max100-localhost.txt  xeon_4_core-max100-localhost.xlsx  xeon_8_core-max100-localhost.txt
(+41 files in other folders)
