[package]
name = "r2d2-example"
version = "0.1.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "1.0.0"
actix-service = "0.4"
actix-http = "0.2"
actix-threadpool = "0.1"

bytes = "0.4"
env_logger = "0.6"
futures = "0.1"
log = "0.4.3"
serde = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_derive = "1.0"
dotenv = "0.13"
derive_more = "0.15"
qstring = "0.7"

[dependencies.diesel]
features = ["postgres", "r2d2"]
version = "1.3.2"