[package]
name = "actix-web-tokio-pg"
version = "1.0.1"
edition = "2018"
 
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
[dependencies]
actix = { version="0.9.0", features=["http"] }
actix-web = { version="2.0.0", default-features = false }
actix-http = { version="1.0.1", default-features = false }
actix-rt = "1.0.0"
actix-codec = "0.5.0"
actix-server = "1.0.0"
actix-service = "1.0.1"
bytes = "0.5.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
futures = "0.3"
env_logger = "0.7"
tokio-postgres = { git="https://github.com/fafhrd91/rust-postgres.git" }
